--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
-      content="Portfolio Website"
+      content="Welcome to Darshan Web Dev, a freelance web developer specializing in frontend and backend solutions. With expertise in Gatsby and NestJs frameworks, I create captivating websites with user-friendly interfaces and impressive Prismic CMS integrations. Explore my portfolio for striking designs and robust backend functionality. Let's collaborate and bring your web visions to life!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png" />
     <!--
@@ -24,8 +25,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Portfolio Website</title>
+    <title>Darshan Chobarkar</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
